--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -7,6 +7,7 @@
  }
  .hire{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   right: 0;
@@ -18,6 +19,8 @@
  }
 
  .button{
+  margin-top: 10px;
+  display: block;
   /* text-align: center; */
   border-radius: 5px;
   border:none;
@@ -30,4 +33,16 @@
   cursor: pointer;
  }
 
+ .ratingTable{
+  margin: 0px auto;
+  display: table;
+  /* padding: 10px; */
+ }
+ .ratingRow{
+  display:table-row;
+ }
  
+ .ratingCell{
+  padding: 10px;
+  display: table-cell;
+ }
