--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,20 @@
+.Navbar{
+    /* color: white; */
+    width: 100%;
+    position: fixed;
+    text-align: center;
+    background-color: #52db95;
+    opacity: 1;
+    z-index: 1;
+    padding: 8px 0;
+}
 .menu{
-    margin:30px 0;
+    margin:10px 0;
+    /* position: fixed; */
 }
 .menu a{
+    color: white;
+    font-weight: 600;
     text-decoration: None;
     margin-right:100px;
 }
