--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -6,6 +6,8 @@
    width:50%;
  }
  .hire{
+  width:350px;
+  margin:0px auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,27 +18,28 @@
   background-color: rgb(251, 247, 247);
   padding: 10px;
   margin-top: 10px;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: #cdf1d1;
+  font-weight: 600;
  }
 
  .button{
   margin-top: 10px;
   display: block;
-  /* text-align: center; */
   border-radius: 5px;
   border:none;
   font-weight: 600;
-  background-color: cornflowerblue;
+  background-color: rgb(0, 0, 0);
   color: white;
   width:fit-content;
   padding: 10px;
-  /* margin-top: 4px; */
   cursor: pointer;
  }
 
  .ratingTable{
   margin: 0px auto;
   display: table;
-  /* padding: 10px; */
  }
  .ratingRow{
   display:table-row;
