--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -1,4 +1,6 @@
 .serviceDiv{
+    width:80%;
+    margin:0px auto;
     display: grid;
     row-gap: 25px;
     justify-items: center;
@@ -11,7 +13,7 @@
     margin-right: 5%;
     width:500px;
     padding: 10px;
-    background-color: #52db95;
+    /* background-color: #52db95; */
 }
 .imageSection{
     display: flex;
@@ -37,18 +39,26 @@
     width:120px;
     height:120px;
 }
-.footer{
-    /* width:100%; */
-    text-align: start;
-    position: absolute;
-    display: flex;
-    bottom: 5px;
+.separator{
+    width:100%;
+    height:1px;
+    background-color:black;
+    margin: 10px 0;
 }
-.footer div{
+.body{
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center;
+}
+.userImage{
+    width:40px;
+    height:40px;
+    border-radius: 50%;
     margin-right: 5px;
 }
 a{
     text-decoration: none;
-    color: white;
+    color: rgb(54, 51, 51);
     font-weight: 600;
 }
