--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -1,5 +1,5 @@
 .serviceDiv{
-    width:80%;
+    width:90%;
     margin:0px auto;
     display: grid;
     row-gap: 25px;
@@ -7,18 +7,18 @@
     grid-template-columns: auto auto;
 }
 .service{
+    background-color: white;
+    border:1px solid black;
+    color: black;
     display: flex;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 5px;
+    /* border-radius: 5px; */
     margin-right: 5%;
-    width:500px;
+    width:40vw;
     padding: 10px;
-    /* background-color: #52db95; */
 }
 .imageSection{
     display: flex;
-    /* justify-items: center; */
-    /* justify-items: center; */
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -29,15 +29,15 @@
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     flex-direction: column;
     width:70%;
 }
 
 .image{
     border-radius: 50%;
-    width:120px;
-    height:120px;
+    width:8vw;
+    height:8vw;
 }
 .separator{
     width:100%;
@@ -45,20 +45,61 @@
     background-color:black;
     margin: 10px 0;
 }
-.body{
+.subbody{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.body{
+    /* float: left; */
+    /* display: flex; */
     flex-direction: row;
-    justify-content: center; 
+    /* justify-content: center;  */
     align-items: center;
 }
 .userImage{
-    width:40px;
-    height:40px;
+    width:2.5vw;
+    height:2.5vw;
     border-radius: 50%;
-    margin-right: 5px;
+    margin-right: 10px;
 }
 a{
     text-decoration: none;
     color: rgb(54, 51, 51);
     font-weight: 600;
+}
+
+@media screen and (max-width:650px) {
+    .serviceDiv{
+        grid-template-columns: auto;
+    }
+    .service{
+        width:80vw;
+    }
+    .image{
+        width: 20vw;
+        height: 20vw;
+    }
+    .userImage{
+        width:6vw;
+        height:6vw;
+    }
+}
+
+
+/* * mode change */
+.serviceDiv.false .service{
+    background-color: black;
+    border:1px solid white;
+    color: white;
+}
+.serviceDiv.true .service{
+    background-color: white;
+    border:1px solid black;
+    color: black;
+}
+
+.serviceDiv.false .separator{
+    background-color: white;
 }
