--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -36,7 +36,11 @@
   color: white;
   width:fit-content;
   padding: 10px;
-  cursor: pointer;
+  /* cursor: pointer; */
+ }
+
+ .button a{
+   color:white
  }
 
  .ratingTable{
