--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -6,13 +6,17 @@
     justify-items: center;
     grid-template-columns: auto auto;
 }
+
+.serviceDiv a{
+    cursor: auto;
+}
 .service{
     background-color: white;
     border:1px solid black;
     color: black;
     display: flex;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    /* border-radius: 5px; */
+    border-radius:1%;
     margin-right: 5%;
     width:40vw;
     padding: 10px;
@@ -41,9 +45,9 @@
 }
 .separator{
     width:100%;
-    height:1px;
+    height:0.5px;
     background-color:black;
-    margin: 10px 0;
+    margin: 3px 0;
 }
 .subbody{
     display: flex;
@@ -52,6 +56,9 @@
     align-items: center;
 }
 .body{
+    /* position: absolute; */
+    right:0;
+    top:0;
     /* float: left; */
     /* display: flex; */
     flex-direction: row;
@@ -64,12 +71,43 @@
     border-radius: 50%;
     margin-right: 10px;
 }
+.userName{
+    font-size: small;
+}
 a{
     text-decoration: none;
     color: rgb(54, 51, 51);
     font-weight: 600;
 }
 
+.footer{
+    display: flex;
+    justify-content: center; 
+}
+
+.footer div{
+    margin:0px 10px;
+}
+
+.footer button{
+    cursor: pointer;
+    color: white;
+    background-color: cornflowerblue;
+    font-weight: 600;
+    border: 0;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.footer a{
+    cursor: pointer;
+    font-size:20px;
+}
+
+.price{
+    margin: 10px 0;
+    font-size:15px;
+}
 @media screen and (max-width:650px) {
     .serviceDiv{
         grid-template-columns: auto;
