--- a/src/components/Admin/admin.module.css
+++ b/src/components/Admin/admin.module.css
@@ -1,9 +1,7 @@
-/* body{
-    margin: 0;
-} */
 .container-fluid {
     margin-bottom: 60px;
-    background-color: #EEEEEE;
+    /* background-color: #ce3131; */
+    padding: 0;
 }
 
 .usercont{
@@ -13,7 +11,7 @@
     /* border-bottom: 2px solid white; */
     margin:0px auto;
     width:50%;
-    padding: 5px;
+    padding: 0px;
 
 }
 .userhead{
@@ -21,7 +19,7 @@
     /* border:2px solid cornflowerblue; */
     /* padding: 10px 10px; */
     border-radius: 5px;
-    padding: 10px 10px;
+    padding: 0px 0px;
 }
 
 .userbody{
@@ -37,7 +35,7 @@
 .menu-icon{
     position: absolute;
     top:5px;
-    right:10px;
+    right:0px;
     cursor: pointer;
 }
 
@@ -53,7 +51,7 @@
     margin-top: 40px;
     margin-bottom: 33px;
     margin-left: 7%;
-    background-color: #EEEEEE;
+    /* background-color: #EEEEEE; */
 }
 
 .clow {
